[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "qstion"
dynamic = ["version", ]
authors = [
    { name = "Marek Nemeth", email = "99m.nemeth@gmail.com" },
]
description = "Simple package for parsing querystrings into nested dictionaries and vice versa."
readme = "README.md"
license =  { text = "BSD-3-Clause" }
requires-python = ">=3.11"
dependencies = []
keywords = ["querystring", "query", "string", "url", "parse", "serialize", "deserialize", "nested", "dict", "dictionary", "qs", "qstion"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/kajotgames/qstion"
"Bug Tracker" = "https://github.com/kajotgames/qstion/issues"
"Documentation" = "https://github.com/kajotgames/qstion/blob/main/README.md"

[options]
test_suite = "tests"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["qstion", ]

[tool.setuptools.dynamic]
version = {attr = "qstion.__version__"}

[coverage.run]
branch = true
source = [
    "src/qstion",
    "tests",
]

[coverage.paths]
source = "qstion"
